tests/custom/STARIS_2022/basic/partitions/partition-operator-errors/set-participant/stderr.expected
Error:
    Parser error in file: set-participant.essence Error is:
ValidatorError set-participant.essence:4:28:
  |
4 | such that a = participants(s)
  |                            ^
Type error:
	Expected: partition from ?
	Got: set of int

